--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,12 @@ POSTGRES_PORT=5432
 # Redis
 REDIS_HOST=redis
 REDIS_PORT=6379
+# REDIS_URL=redis://localhost:6379
+# SMS (Twilio)
+TWILIO_ACCOUNT_SID=your_sid
+TWILIO_AUTH_TOKEN=your_token
+TWILIO_FROM_NUMBER=+15555555555
+SMS_DEFAULT_COUNTRY_CODE=55
 # MinIO (S3)
 MINIO_ROOT_USER=minioadmin
 MINIO_ROOT_PASSWORD=minioadmin
